--- a/src/lang/i18n/en.json
+++ b/src/lang/i18n/en.json
@@ -16,6 +16,11 @@
       "email_description": "Let us know your email. We'll never share your email with anyone else.",
       "password": "Password",
       "password_description": "Please choose a strong password and don't tell to anyone else."
+    },
+    "error": {
+      "title": "Something wrong happen !!!",
+      "description": "Wrong username or password. If you still not register an account? ",
+      "close": "Close"
     }
   },
   "register": {
